syntax = "proto3";
package gRPCDemo;
service gRPC {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHi (SayHiRequest) returns (SayHiReply) {}  
  rpc simpleHello(SayWhat) returns (SayWhat) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message SayHiRequest {
  string name = 1;

}

message SayHiReply {
  string message = 1;
}

message SayWhat {
 string name = 1;
 string message = 2;
}